tests/main_tests/ui/assert_none_ui_err.rs
assert_cfg::none!{
    feature = "foo",
    feature = "bar",
    feature = "baz",
}

assert_cfg::none!{
    feature = "foo",
    feature = "bar",
    feature = "qux",
}

assert_cfg::none!{
    feature = "foo",
    feature = "world",
}


fn main(){}